# ChangeLog for dev-java/eclipse-ecj
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/eclipse-ecj/ChangeLog,v 1.99 2015/03/15 21:07:16 chewi Exp $

*eclipse-ecj-4.4.2 (15 Mar 2015)

  15 Mar 2015; James Le Cuirot <chewi@gentoo.org> +eclipse-ecj-4.4.2.ebuild:
  Version bump plus some clean up. Fixes issue introduced in last version where
  two identical jars were installed. GNU findutils is now always present in
  @system.

  10 Feb 2015; Miroslav Šulc <fordfrog@gentoo.org> eclipse-ecj-3.7.1.ebuild,
  eclipse-ecj-3.7.2-r1.ebuild:
  slot 3.7 fails to compile with jdk 8

  10 Feb 2015; Miroslav Šulc <fordfrog@gentoo.org> -eclipse-ecj-3.6.ebuild,
  -eclipse-ecj-3.7.2.ebuild, -eclipse-ecj-4.2.ebuild:
  removed obsolete ebuilds

  29 Nov 2014; Agostino Sarubbo <ago@gentoo.org> eclipse-ecj-4.4.1.ebuild:
  Stable for ppc64, wrt bug #519590

  29 Nov 2014; Agostino Sarubbo <ago@gentoo.org> eclipse-ecj-4.4.1.ebuild:
  Stable for ppc, wrt bug #519590

  13 Nov 2014; Agostino Sarubbo <ago@gentoo.org> eclipse-ecj-4.4.1.ebuild:
  Stable for x86, wrt bug #519590

  13 Nov 2014; Agostino Sarubbo <ago@gentoo.org> eclipse-ecj-4.4.1.ebuild:
  Stable for amd64, wrt bug #519590

  02 Nov 2014; Johann Schmitz <ercpe@gentoo.org> eclipse-ecj-4.4.1.ebuild:
  Update jar file with all ressources

*eclipse-ecj-4.4.1 (02 Nov 2014)

  02 Nov 2014; Johann Schmitz <ercpe@gentoo.org> +eclipse-ecj-4.4.1.ebuild:
  Version bump for www-servers/tomcat

  04 Jun 2014; Chema Alonso <nimiux@gentoo.org> eclipse-ecj-3.7.2-r1.ebuild:
  Stable for amd64 wrt bug #503890

  10 Mar 2014; Johannes Huber <johu@gentoo.org> eclipse-ecj-3.3.0-r4.ebuild,
  eclipse-ecj-3.4-r5.ebuild, eclipse-ecj-3.5.2-r1.ebuild,
  eclipse-ecj-3.6-r1.ebuild, eclipse-ecj-3.7.2-r1.ebuild:
  x86 stable, bug #503890

  07 Oct 2013; Agostino Sarubbo <ago@gentoo.org> eclipse-ecj-4.2.1.ebuild:
  Stable for ppc64, wrt bug #469434
