@@ -22,25 +22,25 @@ EBUILD eclipse-ecj-3.7.1.ebuild 2882 SHA256 7ff836c034c7982ee12409123a6b5183aebf
 EBUILD eclipse-ecj-3.7.2-r1.ebuild 2932 SHA256 0354e4157c0310ea0d8fb8db34067a11caaf4076f835f807bef8f4b137e5c0fb SHA512 4f60520b68f84c203d3a1b19ed6433921f7ab5ca0b054cef77956c960dd4009b5d275f186900274bec6947ca1054219655ea1d8e5a6272695710de4032390395 WHIRLPOOL 94e75e34d80380d9ef5af2850387eb3b2c498845e651bec3e3929856aa4db7d95e9c6a1c91362e61ebe85c5b7ca36c81a774f3eae27ef71daa427e80d774b707
 EBUILD eclipse-ecj-4.2.1.ebuild 2941 SHA256 ac17dfadb4b108a9d6e4615e2a365f83728e0fef50e45b69ff3bedc4f35682d3 SHA512 5ca43e93ac564e12152281e834a2bf28d5c57e08f32852a1de039ddf86805a88c443d16ef4571d25cf9686ed7b877dcdb8093b22a9320c53adeb4d2a9cff52a5 WHIRLPOOL e0536adddc6ae50240a1658ed0e90bb39c8818520a06fd0c74d0d552bf16cd9cc0d933a2c734bdd7e864c2e4ab589e7cf7cb938ef451ba3f97a8bcfa76c3670f
 EBUILD eclipse-ecj-4.4.1.ebuild 1714 SHA256 9b0fd42b30450249b322e14c7ebb30855852c838dce64200eabf613aff997d7d SHA512 f8fc93cd8182bc65f41e48797bed08baeee5ca174c3c1d50be62651d87467fee2b55d59d0f1e00bda386133316cd7458e507098bcc505a7c0db750557bf46772 WHIRLPOOL f60bc0670983b6b97244bc5f0e26c588548aedc412813d5279b11e07a6dc9ff47076ea560c5ff577af06bd5aa45b8d9bb8705e164abbf060af60f0838c5f0ef9
-EBUILD eclipse-ecj-4.4.2.ebuild 1557 SHA256 17f072b48b665eab81990ff8d18908ce87ec7fae81983849a8e3efca5258b580 SHA512 73832a02785644fb9061215496e0bad7703f493ae291cffc471ad8ed90ea084ecf3d9093f4b99e3002691e08d895659388f0f49c24d545580c27e8cdbb2918cf WHIRLPOOL 8030a65e39dafab84911039944e45153b14271445f193b74113ce0d84c5835109dc30e6ac56e608fffb7cb93b09a3036e69d732e81be0b5acc9b80f0e58644d2
-MISC ChangeLog 14915 SHA256 04da04b614841639fa58fc1032e919d481fecdc1d81e2b6f14676f832de6dc0c SHA512 448380f91c605c357ee7d054433a94ac56f173eae8afd3c7ae6f45603ba759408f61cd7a29ef04a00beab2eb737d3ccae93b7d7f92b97801aa7b99cdbbd4d025 WHIRLPOOL 7417ed81a6b35fc86edaf281b4c84cd3e86013cdc4d0460112e67bbd9215a0ed87ba4913d6cdbdaee03ec6db28c3ba5419e8b7e7e63fe887e16e84a62a7607f3
+EBUILD eclipse-ecj-4.4.2-r1.ebuild 1541 SHA256 87f952ceb96397db28012abe1fca73bde78c757a3bf767f8348b37585fa3bbdb SHA512 0651da50ceeefea10f6800700c74a8ed8eed41148819e1234af1161b6779d48f6bfd0626ebe3548b90a1dbfc652f56a031d829f3d46690538e2e9f607349ee35 WHIRLPOOL c3512cd5f4cd48a3c97a3247608026460a04916670dd77643fd5b8345428a497f8518497a3420492a1e5b1503a2d7908e0226ec1d385cdb59f455b21cebff819
+MISC ChangeLog 15246 SHA256 279aa5b390e4bff565d4d806c0512bfd9385478ca6c97fdb2a3b557280a3a778 SHA512 0a2a33c3ebb3e10799b9982f7614f62a4e6910103261e0d883d5236a7a44502375678fe09c95695999b070a588ed30aee268d94f6cac565a9273c28be14a662d WHIRLPOOL 1a8ca4576bfacb14b6ab6cb57665dbab572f402339fed05b1e7288c12a089b068063e963e6a53935d7770673a0a22be4189a2843abfe65681e8ff3c1f3ff07f9
 MISC metadata.xml 570 SHA256 dd2a09440442264363911b455040196cbb42763fbacbb135c07b3f0de44a1e3a SHA512 d71a40ba9d726da96a59e2741756863af162d44b8a3ae3a419124a43dd31180857a8e638b2e1e37d4d4bba226482900e4fb775ecf202c0cb496dc840c8c34a5b WHIRLPOOL 5963a35acb313b2d80d051be628a86e581422648e7b8eeb2cbf61c33f8ea7a1d4deb45623ef406d6fbbe1bb0fc74436ab19846b2eae09d8239608e7a7e89d29b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVBfSLXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVCp73XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1MjhERTZCRDg2OTFBNDM5MUZEQTJFRDQy
-MUM2MzIxMjlDNkQ3REU0AAoJECHGMhKcbX3kelIP/2uo+JWlugzE5RogT8T4QJPb
-NniMsmHWUoqJX/CW/lbCOEIWNBJ8M9msf6rTGWn9ZweHfkfltAEwkx9RXRgYWp4x
-DTwFlAwznxgcAMGe2rVeOLu635QDwwkqa3Qf00MdfwQrhOCiuUwb5s/Fs1L22QWV
-RkNsaK3em+taSc+FG+ToEvPRlm537+W4JVPXNKq6frApO7lsIbZd4T7OAcbnFptR
-d5ouYS7SuOCXMlo0qEoahR5hiY5jI5wZzhjIEXT/ORzpQboSLmKQXa975pKqiXCb
-QyzaLpPP42G4vsbyHvxP6GLCpIaZJBgfdsNJ6LE72tET5ARIihonyUJwxtWaYpXC
-A99sIl85r+0fQKXBewmiQI44GX3oV/DhNWKERbaXBqGECfBNOix0ibR498l9FXMQ
-sAqzqdvtwRvPoSZJVh2DUgsr/6luZyJScky5pLvMXNVibvQWKaiX5rGipbBgJMJ2
-Co9kHXXUOFtj/q/oukpizstD4MrnktSq8CrLtVuilJLn4mLzLRx5rHnXju9xCDjW
-28hngE1ZbIctz0PrI7PhbK4UcHH4drW8WkLIznzT5Pxc0g+x2E+QDqiIbwEdIQVF
-UF3v0t54J1RKhGTxAOsbSdwJ17axCqX7Nr/UIXdxKuI6xc8MnrDbF/ziW44fmTE1
-3gcGk8KRw0Afa9fbXlsl
-=AFgQ
+MUM2MzIxMjlDNkQ3REU0AAoJECHGMhKcbX3kBlQP/2g9VS6w5CxG3Q5m4wQbUak8
+gDrLBaP/vR2/FuiNTvPz/iA4h1ysqHyxKtrVRw/cLfyAT7/VJc0Bu3fAgujPaQ6U
+kSsV52Q5PAIEb6Tq0/u6SzA5D4qPZ2JxFVDnj9Y4mGfSP7kaNamX9BTlLzmvWU4+
+VsJWl2oQuu/v1mjbOD/vJWMB7Z/kSrUj3E66V8uAeWuuoaWMj749LcWp18EYMyEP
+yN6hgLJAHNukBX5Nh/TfP5Xf/F7ofplJwYdyiqF+tzP16w/kqr5eNA3hyg9YirJ/
+TtCKqCitmJHvYA3umbOqAzd3k6hqMZTONvUhgctiwxs/6oRZayQZ+FIo1jP9wwnw
+CnNDA9wpvhAakj713zZVjUnmSYaPAJjy6sQy3wGyvA1407b1K2HihDbJt904X8gx
+ZzQtSWUTMWmOKOWYycuuiaBHXkDVF0S65mFuqPoWalSEpG2NVUIjg5HIdH1IUxdp
+C+dKl9RoABrpF4e3AE9WexnufMfusHD4RlkcmhvtwVVkFSx8VxBTfU+RsMCAqkRn
+oyHhHGb1HpJGEvvP94xFNxEcHsXNEpdD+WoqF5aKlZNNyBR/N28hJdXVacUOkkrc
+Rp2qsnYKO+YbDn/7z06nCctJ6qrPJoXAthFzcS1hZOeJ9i3Ey7dylira6VilvPvB
+7z5IGU8xQE8th0m09hv9
+=ymTX
 -----END PGP SIGNATURE-----
