@@ -11,4 +11,4 @@ RDEPEND=|| ( app-admin/eselect-java app-admin/eselect-ecj ) >=virtual/jre-1.6 >=
 SLOT=4.4
 SRC_URI=http://download.eclipse.org/eclipse/downloads/drops4/R-4.4.2-201502041700/ecjsrc-4.4.2.jar
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-pkg-simple	b21814347affda1506f12c1721a8fa55	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=085d4cc42af7bc14b6ce2d5efb294683
+_md5_=d32720848c18120ea662b2244011164c
