@@ -4,10 +4,10 @@ DESCRIPTION=X.Org Xfont library
 EAPI=5
 HOMEPAGE=http://xorg.freedesktop.org/
 IUSE=bzip2 ipv6 truetype static-libs doc
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris
+KEYWORDS=~alpha amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris
 LICENSE=MIT
 RDEPEND=x11-libs/xtrans x11-libs/libfontenc truetype? ( >=media-libs/freetype-2 ) bzip2? ( app-arch/bzip2 ) x11-proto/xproto <x11-proto/fontsproto-2.1.3
 SLOT=0
 SRC_URI=http://xorg.freedesktop.org/releases/individual/lib/libXfont-1.4.9.tar.bz2
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	autotools-utils	3727db64c7b960903d5033280f108080	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	xorg-2	50dd640df6d0554c259daa81531ed3ee
-_md5_=adf33414eeb529bc9559ad7d223c1e02
+_md5_=e0a2f50f49f73f2c751a8b9c3ec9b594
