@@ -9,25 +9,25 @@ DIST libXfont-1.5.0.tar.bz2 491483 SHA256 3a3c52c4adf9352b2160f07ff0596af17ab14f
 DIST libXfont-1.5.1.tar.bz2 502903 SHA256 b70898527c73f9758f551bbab612af611b8a0962202829568d94f3edf4d86098 SHA512 3ca8f7c1c642072c9bf9a755b45857f77753111ce6f1f99bd804e0f1b90cf61259fbde609a5342cce9c1ac5431b093bf75febb68baff2f2688e0a5fe5864a666 WHIRLPOOL dda0749a147591a70d6aacb4f8b5412a63cd40cb10ae2a6e2445b4763978f0d88f4fd805b18ddfd1ed36a6ef56ec2f5e657326ce969070c2b6461367f849a7d6
 EBUILD libXfont-1.4.8-r1.ebuild 1108 SHA256 f44eb658ba20a184450dea02f1f538bed0baa2e41966f91c8887e76439107443 SHA512 23f73ab7a0dc377c6eef914c75cc9f3c8c97a3f709adbda06aeb8ded0255adaab24713f28a071a7995e89df89a2bc32beecca144123eff085ef45eeb78c6c3e0 WHIRLPOOL 0eda4efa44cbf01bab30774707f5c176e84fdfdcbe958529bfd81c8b5572224d613abf4d1e844d2c56201e52bff5bdc30335303dab36b9dca9f7052c7fa7d793
 EBUILD libXfont-1.4.8.ebuild 948 SHA256 3c0d8c51ffda2169252e8192438108ea7ec6f946027ff52577c1d8fb0f1d1824 SHA512 166c32214ffd450785e8f04db79240bcf068a4791000a5c6718d6449cb9d910a0d61340530a6fe0ddbf7d60bb0705280a0e154837f6c992bc8bea7906cfcb0d1 WHIRLPOOL 894b92ea0544c6fe696141b9e2e00a2c82f082baf904c878e06b7d0193041ab1e9e91f1e7cf5af189ff581d428e4bb8f77a9fe6eaa92b5a3d2e8d7c0d1fea7d5
-EBUILD libXfont-1.4.9.ebuild 961 SHA256 25de6515799efea760c28b2d70dcdf396922fa21d8bbf067d2e6db575a3c86aa SHA512 5396f424fbac257b97da20fa7789b277c5e93fd9c71a73511f47da31db846a3dda6ad7340a82228aef891a003300b1232d0cd7f73dc7eb1dac3e4d117659b512 WHIRLPOOL ba7db53f83c0a10cff9e786d924583c175a2da0d3a12faaa1543cfd93e59e33657136e921e6e98abf7781ff601c477f13fa51f4b20668e1d7f3a3671be3f7f08
+EBUILD libXfont-1.4.9.ebuild 954 SHA256 74cb24819a5e7d4f10f0723118cf70d59db51af1f5a2e51b7b6c28deac88327c SHA512 c4c98d4f46d2c6ec9428c9df8d49b405aaf086fd8bf9db7a61703286af5dac5085ac354a067a0b0ad6a1c867d1550f06285ed626fefc255791260f530f44b480 WHIRLPOOL 0e37f58252786525d6aa5aed38076c2bba949866b588a84167ae69fc528791917cb6e44aa3452fae251a87fa2a6b1c0e1ab5f9687a0fe9a7e78e2aa97824ccf1
 EBUILD libXfont-1.5.0.ebuild 994 SHA256 3b8430cacb6ea9b85403cd1c17d14e35413470b0e7df8ab6af725e5c6893329f SHA512 e31e635ebfcda5498b36275033f2ded37a0e8e222d8a75bebf455bb71ca017cb3dbad3fb5f50a8cf7aabee2cac7610eb2d762117934a991c189fa12e14df1753 WHIRLPOOL 8285ac18835b5666e4bc01164a8ee42d19529c48a765218983e0bf92dfe5893fcdd7e00d2e4dfb25fce6d5c926752d6f375ef3dfb3606fb96204360f2b499391
-EBUILD libXfont-1.5.1.ebuild 1004 SHA256 081b4171ae3f7dcb7c774862779870dbb9333255582e37c0657a8f34b256d907 SHA512 fbc49e35eec7ef7e967a06c9ec1372f8323ea890c2a28e4e0a77f8ee8bb19a04c0f89e64b1ed13b5e3024524ef423aa7246b656773dd213fb0cb6814cec45bf8 WHIRLPOOL cd8cb9843de0325f47dcaf8f2f0d875f7519fd8b76ad2449dd51a8955617ca081772d42a2646bb48203f48a24d2b1b74fd8a0d952ee8ca488b22204a5079bb89
-MISC ChangeLog 29036 SHA256 6a4bfb8e6fa10935752478fab7e4818cd50f6dcbec1fd7335a681180dd6318b0 SHA512 5ea201af03cd7e35c0a4da877318b77cd7448ab12878854b80beab8a1d5a42d1fff9f3ad35030dcb96ec865fc0a67e54bed8e8661b0b33999b137b67da9606a7 WHIRLPOOL 4bdd7cfb6f18ee98a378ebe530dca91eb1020fc298c1b9a3ef98242e2d66855a5d8898cccde6b3feeaa530d7e6d6cb92935a649996ac3529291c51a529dd8d31
+EBUILD libXfont-1.5.1.ebuild 997 SHA256 25656d14604442ccb2201f61db9c196e38fd3f37230768d96ff4d06f076c28eb SHA512 74909d339f3a79c83ad3d3b446876809c3fc837c3294c013b34cf874dfeb5d9fc8b204f3acb4073e6e092f56ff9b3e0472ea20a681b0258a39407ba31b65e71e WHIRLPOOL 5280620413515c3b9ef389cde96b62fb29170ba66ab533486e356065bbe53066b9f8067d211f743a10099b715789c04264cbe10f803070f22976d52057ba26bf
+MISC ChangeLog 29273 SHA256 aecc4bfed7a7f1aeadd502ea155abaaae793ce488b37d4278e2f5995f17ac394 SHA512 b40428b646b124e2d5efda0ed2e08a3efd95041923852ed3b1dfe4280e6d41e738a29cf58dd700e91efa0eb83fe7ea6fa32d906015c3b5d2cb0b5e67191dd089 WHIRLPOOL 56c7cec71e006835b585819d1a6c23a08ee6e70a3b221784b7054060b033a3395d6f0b0090661dfd5ab27a9c207b88359b79b6224204d139a1f34f796d31ac7c
 MISC metadata.xml 398 SHA256 b662d73a5fa5a0b131621132a274e3d4ca23661404d91cd04b40dd57942d48d6 SHA512 0b670722854b45b90aea4d9937549743b63f7ab2ed4d7a12b7991bc1273210fee832717c4d2bfd12bf8abfdac0bbd94166202192cad7caa9865c184a915a8ddc WHIRLPOOL f9db002e6fc4c7001ae3da4dcddf82b94610ae4fcaa7830f7e93ca7b0add63cb8229389904927b3c2c47700b6d1f7276bfdeb4bd828fb4b98d62b7b5fcb3a60a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVCeR5AAoJEIug43o+kWudrHUP/3FdrwocAIBVQbTG+EVh2a5H
-c+ac25/Nxj7To8B+pnlUbGRwBPK+UsfSuCmdAXzzql6cLJbEJYLF1LWLSHpsJw3O
-fzxVhwKukv/b4CpMk/4NW5mBS/ehPvET3zBCstnw0fwDiSYHN/MbQX7FLaHjr/t0
-Ymxj3y2hiUxfF8YfQ2snAxkLRmVLeDrbeFXwcCTJzwm1why8P8opj7DNbtSjKvgx
-80lvC7ZxB0+CPR//mrZupg5HM5U1BjWxUgJnFqTeIZfkT0ChpR9MWzonjNe6AbWR
-Iaq5T+CZIjRmjYG0BR7oeEV9P1S9the6NsDPtsDR/d/81NfhVNFNP7QKW6eQranF
-LgB6TUq4tFPI1aBHY2lvWARyCaBQWXF4u5IjcM4gmVxIh2oyXcQyjnHPS6PH7+Zv
-v6nTGyTm4TtlWv2uncr2tVH2t8JQEatAA6LA3L973GPFM4PX14PqhSuUhqStDxG5
-o23joEVDozFPYwpiFDUgB6yujA8WC2oYOjBVKXvR5Lhv/ZnhEHo1RocswkbvKyFE
-bm6uaZqB7XrXSX6LlzRve28CPWPx0VpzloD/1Eh6Jgg3shkrjf9TCSL3tbH/fKcc
-ZptJIth8SAekdsHLZLRx2XbbqRf85h8br9Wp3aEUF4E9jXVG8LlR/kPNlYEVUWIq
-+iAqCUE9zvr0KEmgyVu2
-=guoa
+iQIcBAEBCAAGBQJVCp7jAAoJELp701BxlEWfTzkP/3um6BOMCMy6O60gPxUClTJp
+fkk6vJYbvUG+mg3EZqZLzOoGWJ+1vh3cW2vuKmmHbA7WJjLRTDFlBDGE5tdvr2tP
+jFhdYX0/we9G0RACE+mXq3SIS3qZTyLlcW+e5gvx0VlUAxClNIVvH5ERzdofqHoX
+Njt6lR1uotxjpW6hFFj832q7Oet8xKCuF6hD5eKdynYTKe6FhWo7OiRY9R3trWZO
+8V4V4kGhIsVjI3MXbLbmev2EDW4CW78JNdCkua84pb/zszrg/5+fr3UAARMGtYMy
+8yd6H71vok8uriod8h/vpuHQ+3uq8lKKHgyAX35SAHgB5RdG4Ld4yfH322ZLR65b
+0mkzwC6kI4CtwrVRSVgrj8k6QQbWY3Xar/CDyLQ/GRiuJzmmRlJgkd6f5/U5N7WJ
+RCFfvu9+MeVgFQXwre6jOV8z0WIVnjQ0w0d2sJsfUmOrs/eX1ixSiEx0dE7vIk0W
+Pv6HG/4pgFPIFZaX4/YsVLw8yL0H1Pd2jBIT/mSS5cxj8UUJTE7hl4caL/18I+mI
+DVpNEuPUM3gm+d2gGR/7SZNuoBrKRBK6kheRaZFO2G4s58yYyY/9maWfHfMYAQhG
+78Bqnx87ltG6vB692Lu6uhu+RaizAXaowPfgh5NiZht4uEZCyxwOLShkVhPCOgL8
+m7TcmpzvM48GV+KzGcZZ
+=NQ3e
 -----END PGP SIGNATURE-----
